# crypto-helper

./: .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml
src/: main.py
src/commands/: cli.py
src/commands/functions/: check_balance.py  send_from_wallet_to_wallets.py  send_tokens.py  wallet_generator.py
src/commands/functions/send_token/: send_from_many_wallets_to_one_address.py  send_from_one_wallet_to_many_wallets.py
src/functions/check_balance/: addresses_sample.txt  check_balance.py  config.py
src/functions/send_from_many_wallets_to_one_wallet/: config.py  send_from_many_wallets_to_one_wallet.py  source_wallet_sample.yaml  target_address_sample.txt
src/functions/send_from_one_wallet_to_many_wallets/: config.py  send_from_wallet_to_wallets.py  source_wallet_sample.yaml
src/functions/send_from_wallet_to_wallets/: config.py  send_from_wallet_to_wallets.py  source_wallet.yaml  target_wallets.yaml  target_wallets_sample.yaml
src/functions/send_tokens/: config.py  send_tokens.py  source_wallets_sample.yaml  target_addresses_sample.txt
src/functions/wallet_generator/: config.py  wallet_generator.py
src/services/: operation.py
src/services/abis/: bnb_greenfield_bridge.py  erc20_token.py
src/services/chains/: chains.py
src/services/chains/base/: chain.py  chain_registry.py
src/services/wallet/: wallet.py  wallet_base.py  wallet_from_mnemonic.py  wallet_from_private_key.py
